Fixed typo on the S&T #3 page

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -71,7 +71,6 @@
         .row-fluid.speaker
           .span3
             %h2.name= "Michael Rupp"
-            %p.twitter
           .span9.bio
             %p= "Michael is part of the development team of our sponsor paymill from munich. He is mainly responsible for their API and everything else that does not need a frontend."
             %p= "Before that he worked on a web based print publishing plattform, got some experience as a freelancer and studied information technologies and mathematics."
@@ -87,7 +86,7 @@
           .span3
             %h2.name= "Alex Sinner"
             %p.twitter
-              =link_to "@weitzh", "http://twitter.com/alexsinner"
+              =link_to "@alexsinner", "http://twitter.com/alexsinner"
           .span9.bio
             %p.work_title= "Solutions Architect at Amazon Web Services"
             %p= "Alex is a Solutions Architect at Amazon Web Services and works with businesses of all sizes to help them deliver their IT projects in the cloud. During his career Alex has worked as a researcher in Artificial Intelligence, entrepreneur, and in various roles within Amazon.com."
