Moved next show and tell event to past events and updated some pages accordingly.

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -1,194 +1,9 @@
 - @page_title = "Show & Tell"
-- @page_sub_title = "Show & Tell @ The Technoport"
+- @page_sub_title = "coming soon..."
 
 .row-fluid.pages
   .span9
-    %h4= "18.04.2013"
-    %p
-      :plain
-        Betacube is holding their 3rd <strong>Show & Tell</strong> event at the <strong>Technoport</strong> (Esch/Belval) at the <strong>18th of April 2013</strong>. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region.
-    %p
-      :plain
-        The event will be packed with presentations held by community members and supporters. There will be plenty of <strong>food, drinks and time for networking</strong> during the event.
-
-    %ul.jump
-      %li= link_to "Schedule", "#schedule", :class => "btn btn-small btn-primary"
-      %li= link_to "Speakers", "#speakers", :class => "btn btn-small btn-primary"
-      %li= link_to "Sponsors", "#sponsors", :class => "btn btn-small btn-primary"
-      %li= link_to "Registration", "#registration", :class => "btn btn-small btn-primary"
-      %li= link_to "Venue", "#venue", :class => "btn btn-small btn-primary"
-
-    %a{:name => "schedule"}
-    %hr.soften.small
-    .row-fluid
-      .span12
-        %h4= "Schedule"
-        %ul.schedule
-          %li= "17:00 - Doors open"
-          %li= "17:30 - Drinks & Networking"
-          %li= "18:45 - Introduction"
-          %li= "19:00 - 20:00 - Presentations"
-          %li= "20:00 - 20:30 - Dinner"
-          %li= "20:30 - 21:30 - Presentations"
-          %li= "21:30 - Drinks & Networking"
-
-    %a{:name => "speakers"}
-    %hr.soften.small
-    .row-fluid.speakers
-      .span12
-        %h4= "Speakers"
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Diego De Biasio"
-            %p.twitter
-              =link_to "@tortorman", "http://twitter.com/tortorman"
-          .span9.bio
-            %p= "CEO Technoport"
-            %p
-              =link_to "Diego De Biasio on LinkedIn", "http://www.linkedin.com/in/diegodebiasio"
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "Short presentation of Technoport"
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Hervé Weitz"
-            %p.twitter
-              =link_to "@weitzh", "http://twitter.com/weitzh"
-          .span9.bio
-            %p= "Hervé is currently employed at the Interdisciplinary Center for Security, Reliability and Trust (SnT) of the University of Luxembourg as project manager and he is responsible for technologies transfers and spin-off creation."
-            %p= "Prior to working at SnT he launched a startup for the development of an intelligent social recommendation engine (thestorybaker.com) and was working as IT consultant for SOGETI."
-            %p= "He is also the founder of SELL YOUR MESS an app for easy fast and beautiful selling, buying and renting items. He created the project in spring 2012 and plans to expand the platform to Europe in 2013."
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "Sell Your Mess"
-            %p= "Luxembourg is not Silicon Valley and never will be, although Luxembourg is unique it has to develop its own formula and its first pioneer consumer technology company."
-            %p= "My personal thought was, when it is hard to push a highly innovative and complex product in Luxembourg that should open new markets, why not try with a regarding simple product that disrupts markets. I came up with SELL YOUR MESS, that has even local traditional competitors and the ability to scale beyond the Luxembourgish borders. It is completely trimmed on mobile and social networks, and avoiding similarities to traditional classified ads. It is clearly inspired by Pinterest, Etsy & Instagram, to apply new hype and style to something that exists since the first days of humanity."
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Michael Rupp"
-          .span9.bio
-            %p= "Michael is part of the development team of our sponsor paymill from munich. He is mainly responsible for their API and everything else that does not need a frontend."
-            %p= "Before that he worked on a web based print publishing plattform, got some experience as a freelancer and studied information technologies and mathematics."
-            %p= "He loves movies and good food (too much)."
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "API - what is that?"
-            %p= "Everywhere you hear about cool new APIs you should use nowadays. But what is it? How do i use it? And what do i have to consider if i want to develop one myself?"
-            %p= "I will use paymill as an example for an API and discuss the biggest issues when you try to use or to develop something like that."
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Alex Sinner"
-            %p.twitter
-              =link_to "@alexsinner", "http://twitter.com/alexsinner"
-          .span9.bio
-            %p.work_title= "Solutions Architect at Amazon Web Services"
-            %p= "Alex is a Solutions Architect at Amazon Web Services and works with businesses of all sizes to help them deliver their IT projects in the cloud. During his career Alex has worked as a researcher in Artificial Intelligence, entrepreneur, and in various roles within Amazon.com."
-            %p= "Before joining Amazon Web Services, Alex was responsible for the launch of the Amazon marketplace business in Italy and Spain. He uses his experience to help customers bring their ideas to life using Amazon Web Services’ IT infrastructure platform."
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "A taste of AWS"
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Rodolfo Baïz"
-            %p.twitter
-              =link_to "@rod3412", "http://twitter.com/rod3412"
-          .span9.bio
-            %p= "Fab Lab Manager"
-            %p
-              =link_to "Rodolfo Baïz on LinkedIn", "http://www.linkedin.com/in/rodolfobaiz"
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "What opportunities for digital fabrication - why a Fab Lab in Luxembourg?"
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Marc Marchal"
-            %p.twitter
-              =link_to "@marcmarchal", "http://twitter.com/marcmarchal"
-          .span9.bio
-            %p.work_title= "Webdesigner"
-            %p= "Marc has studied graphic and web design at the CAD in brussels. His interest in the new media and some HTML/CSS crash courses by a good friend guided him to web and application design. "
-            %p= "He made several internships in web agencies and was hired by Moskito during his last internship in 2012. At Mosktio, in direct contact with clients and working on projects of different sizes, he was introduced to the working environment and got the possibilities to develop his design and html skills. One year after he started his job at moskito, he got the possibility to work on the new Utopolis website his largest project, yet."
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "How to please everybody"
-
-        .row-fluid.speaker
-          .span3
-            %h2.name= "Patrick Welfringer"
-            %p.twitter
-              =link_to "@welfringer", "http://twitter.com/welfringer"
-          .span9.bio
-            %p.work_title= "Programmer"
-            %p= "Before moving back to Luxembourg, he worked for startups, web agencies and IT consulting firms in Paris. He coded ecommerce sites and internet applications using Flash, Flex and Java. These days, he develops internet portals for insurances."
-            %p= "He enjoys programming while listening to jazz or electronica and has a healthy obsession with chocolate. His score of 46.49446% in the geek test qualifies him as a Super Geek."
-            %p= "Patrick has 3 kids that spend a lot of time consuming smartphone apps and games, when they could have just as much fun creating them."
-
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "A call to arms for code literacy"
-            %p= "There is a worldwide movement in favour of code literacy - the ability to program - but Luxembourg is slow to catch on. Find out what you can do about it!"
-            %p= "Computers and digital devices are everywhere. They run our phones, our cars, our banks. They play an increasingly important role in our work and our everyday lives."
-            %p= "But our children, the \"digital natives\" are only learning how to use them passively."
-            %p= "We need to show our kids how their digital world actually works. That they can make computers do what they want - instead of the other way around."
-            %p= "We should teach the next generation programming, along with problem solving and logical thinking. This new literacy is essential for all fields of science and technology, no matter what career they pursue."
-            %p= "Code Club does precisely that in the UK. It's an ASBL that runs after-school coding clubs for kids. Volunteers help the children have fun coding games, animations and websites."
-            %p= "Code Club's aim is to give every child the chance to learn to code. And that is also your mission, should you choose to accept it."
-
-    %a{:name => "sponsors"}
-    %hr.soften.small
-    .row-fluid
-      .span12
-        %h4= "Sponsors"
-        .row-fluid.sponsor
-          .span3
-            %h2.name
-              =link_to "Paymill GmbH", "http://www.paymill.com"
-          .span9
-            %p= "Paymill – this is today’s online credit card payment: secure, uncomplicated, and easily integrated."
-
-
-    %a{:name => "registration"}
-    %hr.soften.small
-    .row-fluid
-      .span12
-        %h4= "Registration"
-        %p
-          :plain
-            <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=5886610009&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online Ticketing</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://betacubesnt3.eventbrite.com?ref=etckt">Betacube Show </a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
-
-    %a{:name => "venue"}
-    %hr.soften.small
-    .row-fluid
-      .span12
-        %h4= "Venue"
-        %p
-          :plain
-            <strong>Technoport</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
-            More on <a href="http://www.technoport.lu">www.technoport.lu</a>
-
-    %hr.soften.small
-    .row-fluid
-      .span12
-        %h4= "Location"
-        %ul.location
-          %li= "Technoport, Esch/Belval"
-          %li= "9 avenue des Hauts-Fourneaux"
-          %li= "L-4362 Esch-sur-Alzette"
-          %li
-            = link_to "http://www.technoport.lu", "9 avenue des Hauts-Fourneaux"
+    %h4= "Coming soon..."
 
   .span3
     = render "shared/show_and_tell/menu", :show_home => true
