--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -49,11 +49,11 @@
   .row-fluid.news
     .span4
       %h4= "Show & Tell #3 at the Technoport"
-      %p.date= "20.03.2013"
+      %p.date= "18.04.2013"
       .news_content
         %p= "Betacube is holding their 3rd Show & Tell event at the Technoport (Esch/Belval) at the 18th of April 2013. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region."
-        %p= "The event will be packed with presentations held by community members and supporters."
-      %p= link_to "Show & Tell #3", "http://www.betacube.eu/events/show_and_tell/next", :class => "btn btn-large btn-success btn-spanned"
+      %p= link_to "Show & Tell #3", events_show_and_tell_past_20130418_path, :class => "btn btn-large btn-inverse btn-spanned"
+
     .span4
       %h4= "March Meetup @ The Impactory"
       %p.date= "20.03.2013"
@@ -67,6 +67,7 @@
           :plain
             <strong>March 20th @ 7PM</strong>
       %p= link_to "Sign up for the march meetup", "http://www.techup.lu/564", :class => "btn btn-large btn-success btn-spanned"
+
     .span4
       %h4= "January Meetup @ The Impactory"
       %p.date= "17.01.2013"
