--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,18 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
+      %h4= "May Meetup @ The Impactory"
+      %p.date= "22.05.2013"
+      .news_content
+        %p= "Save the date! Our may meetup is just around the corner."
+        %p
+          :plain
+            Our next meetup will take place at <a href="http://www.theimpactory.com">The Impactory</a> on the 22nd of may at 7PM. We will serve small snacks and drinks.
+        %p
+          :plain
+            <strong>May 22nd @ 7PM</strong>
+
+    .span4
       %h4= "Show & Tell #3 at the Technoport"
       %p.date= "18.04.2013"
       .news_content
@@ -67,17 +79,3 @@
           :plain
             <strong>March 20th @ 7PM</strong>
       %p= link_to "Sign up for the march meetup", "http://www.techup.lu/564", :class => "btn btn-large btn-success btn-spanned"
-
-    .span4
-      %h4= "January Meetup @ The Impactory"
-      %p.date= "17.01.2013"
-      .news_content
-        %p= "Save the date! Our january meetup is just around the corner."
-        %p
-          :plain
-            This time we will meet at <a href="http://www.theimpactory.com">The Impactory</a> at 8PM.
-            Be prepared for some casual networking and some fun.
-        %p
-          :plain
-            <strong>January 23rd @ 8PM</strong>
-      %p= link_to "Sign up for the january meetup", "http://www.techup.lu/493", :class => "btn btn-large btn-success btn-spanned"
