Changed the slogan.

--- a/app/views/shared/_jumbo.html.haml
+++ b/app/views/shared/_jumbo.html.haml
@@ -2,7 +2,7 @@
   .container
     .slogan
       %h1= "Betacube"
-      %h3= "Community for Designers, Developers, Startups & more in the Luxembourgish area."
+      %h3= "Supporting the local community of web professionals in Luxembourg and the Greater Region."
     .logo
       = image_tag "Logo.png"
 = render "shared/social_bar"
