Changed parts of the website to reflect our current goals.

--- a/app/views/content/about.html.haml
+++ b/app/views/content/about.html.haml
@@ -20,12 +20,10 @@
     %p
       :plain
         After that we organized our first <strong>meetups</strong>. Those <strong>meetups</strong> are usually held in a bar in Luxembourg City and everyone is welcome to join. It’s a great way to network with like-minded people and have a beer or two.
-    %p= "But this is not where we stop, We will write more history!"
     %h4= "Goals"
-    %p.strong= "Build a community for Developers, Designers and Startups"
-    %p= "We are very proud to already have achieved a big part of our goal. We believe that we already built the first cornerstones for this new community. We have already a great user base and our events are always filled to the rooftop. This is a great success we are going to build upon."
+    %p.strong= "Support the local community of web professionals"
     %h4= "Community"
-    %p= "The betacube community is a very diverse community. But we all share the same passion. Web, new medias and technology. As all of them cannot coexist with the other anymore, we are a strong believer that we should bring them all together as close as possible."
+    %p= "The community is a very diverse community. But everyone shares the same passion. Web, new medias and technology. As all of them cannot coexist with the other anymore, we are a strong believer that we should bring them all together as close as possible."
     %p= "We already have a huge user base, covering all but not exclusively:"
     %ul
       %li= "Web & Application Developers"
@@ -41,6 +39,7 @@
       %li= "1st Show & Tell in April 2012"
       %li= "2st Show & Tell in September 2012"
       %li= "Already over 4 meetups in 2012"
+      %li= "Over 10 events early 2013"
 %br
 .row-fluid
   .span12
