--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 
 .container
   .marketing
-    %h1= "The Betacube Community."
+    %h1= "Community of web professionals."
     .row-fluid
       .span4
         = image_tag "community/designers.jpg"
@@ -22,7 +22,6 @@
   .marketing
     .row-fluid
       .span12
-        %p= "The Betacube association seeks to build a great and active community. We invite everyone to join us at our events to network and to share knowledge."
         .tags.hidden-phone.hidden-tablet
           %span.label.label-success= "Designers"
           %span.label.label-important= "Illustrators"
