--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -52,7 +52,9 @@
       %p.date= "06.06.2013"
       .news_content
         %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
-        %p= "Independent Café - 06.06.2013 @ 7PM"
+        %p
+          :plain
+            <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 06.06.2013 @ 7PM
 
     .span4
       %h4= "May Meetup @ The Impactory"
