Added next AfterWork event.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -49,6 +49,15 @@
 
     .span4
       %h4= "Betacube After Work"
+      %p.date= "11.07.2013"
+      .news_content
+        %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
+        %p
+          :plain
+            <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 11.07.2013 @ 7PM
+
+    .span4
+      %h4= "Betacube After Work"
       %p.date= "06.06.2013"
       .news_content
         %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
@@ -67,10 +76,3 @@
         %p
           :plain
             <strong>May 22nd @ 7PM</strong>
-
-    .span4
-      %h4= "Show & Tell #3 at the Technoport"
-      %p.date= "18.04.2013"
-      .news_content
-        %p= "Betacube is holding their 3rd Show & Tell event at the Technoport (Esch/Belval) at the 18th of April 2013. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region."
-      %p= link_to "Show & Tell #3", events_show_and_tell_past_20130418_path, :class => "btn btn-large btn-inverse btn-spanned"
