--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -49,6 +49,15 @@
 
     .span4
       %h4= "Betacube After Work"
+      %p.date= "09.10.2013"
+      .news_content
+        %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
+        %p
+          :plain
+            <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 09.10.2013 @ 7PM
+
+    .span4
+      %h4= "Betacube After Work"
       %p.date= "11.07.2013"
       .news_content
         %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
@@ -64,15 +73,3 @@
         %p
           :plain
             <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 06.06.2013 @ 7PM
-
-    .span4
-      %h4= "May Meetup @ The Impactory"
-      %p.date= "22.05.2013"
-      .news_content
-        %p= "Save the date! Our may meetup is just around the corner."
-        %p
-          :plain
-            Our next meetup will take place at <a href="http://www.theimpactory.com">The Impactory</a> on the 22nd of may at 7PM. We will serve small snacks and drinks.
-        %p
-          :plain
-            <strong>May 22nd @ 7PM</strong>
