--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,15 @@
   .row-fluid.news
 
     .span4
+      %h4= "Hyperlink Meetup #1"
+      %p.date= "30.10.2013"
+      .news_content
+        %p= "We are proud to present the new and improved Meetup, called Hyperlink. The Hyperlink meetup is a themed meetup for web professionals specially interested in web development, new trends and best practices."
+        %p
+          :plain
+            <a href="http://www.betacube.eu/meetups/hyperlink" target="_new">Read more about Hyperlink</a>
+
+    .span4
       %h4= "Betacube After Work"
       %p.date= "09.10.2013"
       .news_content
@@ -64,12 +73,3 @@
         %p
           :plain
             <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 11.07.2013 @ 7PM
-
-    .span4
-      %h4= "Betacube After Work"
-      %p.date= "06.06.2013"
-      .news_content
-        %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
-        %p
-          :plain
-            <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 06.06.2013 @ 7PM
