Added additional information to the news post for Hyperlink.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -52,9 +52,11 @@
       %p.date= "30.10.2013"
       .news_content
         %p= "We are proud to present the new and improved Meetup, called Hyperlink. The Hyperlink meetup is a themed meetup for web professionals specially interested in web development, new trends and best practices."
+        %p= "When: 30. October 2013 @ 7PM"
+        %p= "Where: Technoport at Esch/Belval"
         %p
           :plain
-            <a href="http://www.betacube.eu/meetups/hyperlink" target="_new">Read more about Hyperlink</a>
+            <a href="http://www.betacube.eu/meetups/hyperlink" target="_new">Registration and event details</a>
 
     .span4
       %h4= "Betacube After Work"
