Added next Hyperlink Meetup.

--- a/app/views/content/meetups_hyperlink.html.haml
+++ b/app/views/content/meetups_hyperlink.html.haml
@@ -2,25 +2,15 @@
 
 .row-fluid.pages
   .span9
-    %h3= "Hyperlink - 30.10.2013"
+    %h3= "Hyperlink"
     %p= "Betacube is proud to present the new and improved Meetup, called Hyperlink. As part of our support to the local and growing web professionals community, we are holding this event at the Technoport in Esch-Belval. Giving us more space and more freedom to hold the best possible events."
     %p= "The Hyperlink meetup is a themed meetup for web professionals specially interested in web development, new trends and best practices."
     %p= "Join the Hyperlink meetup and have a great evening talking about the latest happenings in the web development world while holding a juicy beverage."
     %p= ""
-
-  .span9
-    %h4= "Schedule"
-    %ul
-      %li= "18:30 - Doors open"
-      %li= "19:00 - Introduction"
-      %li= "19:30 - Presentations by Community Members (tba)"
-      %li= "20:00 - Dinner & Networking"
-
-  .span9
-    %h4= "Registration"
-    %p
-      :plain
-        <div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=7517082797&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Event Registration Online</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.com/event/7517082797?ref=etckt">Hyperlink #1</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+    %p= ""
+    %p= "Hi, I'm a Hyperlink"
+    %p= "Hyperlink, in computing, is a reference to data that you can follow and read. A hyperlink can point to a complete document or to a specific element inside a document. We believe that this paradigm can also be applied to this community of web professionals consisting of web developers, system administrators, designers and more. We believe that every individual is a document full of knowledge, experiences and ideas. It’s our goal to build the connections, those Hyperlinks, by organising the events you all participated over the last 2 years."
+    %p= "The idea of building connections is one of the founding thoughts why we started Betacube. Getting together, networking, sharing knowledge and having a great time."
 
     %h4= "Meetup Details"
     %ul
