--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,17 @@
   .row-fluid.news
 
     .span4
+      %h4= "Hyperlink Meetup #2"
+      %p.date= "15.01.2014"
+      .news_content
+        %p= "Save the date! Our next Hyperlink Meetup will be back in January 2014."
+        %p= "When: 15. January 2014 @ 7PM"
+        %p= "Where: Technoport at Esch/Belval"
+        %p
+          :plain
+            <a href="http://www.betacube.eu/meetups/hyperlink_2" target="_new">Registration and event details</a>
+
+    .span4
       %h4= "Hyperlink Meetup #1"
       %p.date= "30.10.2013"
       .news_content
@@ -56,7 +67,7 @@
         %p= "Where: Technoport at Esch/Belval"
         %p
           :plain
-            <a href="http://www.betacube.eu/meetups/hyperlink" target="_new">Registration and event details</a>
+            <a href="http://www.betacube.eu/meetups/hyperlink_1" target="_new">Registration and event details</a>
 
     .span4
       %h4= "Betacube After Work"
@@ -66,12 +77,3 @@
         %p
           :plain
             <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 09.10.2013 @ 7PM
-
-    .span4
-      %h4= "Betacube After Work"
-      %p.date= "11.07.2013"
-      .news_content
-        %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
-        %p
-          :plain
-            <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 11.07.2013 @ 7PM
