Minor typo and language corrections

--- a/app/views/content/about.html.haml
+++ b/app/views/content/about.html.haml
@@ -6,7 +6,7 @@
     %h4= "How it all began"
     %p
       :plain
-        It all started in 2010 when <strong>Charel Buchler</strong> and <strong>Georges Jentgen</strong> first talk about a new idea over Skype.
+        It all started in 2010 when <strong>Charel Buchler</strong> and <strong>Georges Jentgen</strong> first talked about a new idea over Skype.
     %p
       :plain
         The main goal was quite simple: <strong>“Build a community for Developers, Designers and Startups”</strong>. We started developing so many different ideas on how to achieve this. We talked about weekly/monthly <strong>meetups, conferences, barcamps, and more</strong>. We were immediately sure that these ideas could all work. But it was only in the beginning of 2011 that we jump-started our project <strong>Betacube</strong>.
