--- a/app/views/content/events_meetups.html.haml
+++ b/app/views/content/events_meetups.html.haml
@@ -3,8 +3,8 @@
 .row-fluid.pages
   .span6
     %h4= "Meetups"
-    %p= "Meetups are casual get-togethers planned a couple of weeks in advance. The goal of the meetups is to do networking and having a good time."
-    %p= "There is no schedule and no moderation. Everyone is invited to join for a couple of beers at a local pub."
+    %p= "Meetups are casual get-togethers planned a couple of weeks in advance. The goal of the meetups is to network and have a good time."
+    %p= "There is no schedule and no facilitation. Everyone is invited to join for a couple of beers at a local pub."
   .span6
     %h4= "Upcoming Meetups"
     %ul.meetups
