--- a/app/views/content/meetups_hyperlink_1.html.haml
+++ b/app/views/content/meetups_hyperlink_1.html.haml
@@ -28,4 +28,4 @@
       %li= "Want to share/demonstrate an idea/project/application? Contact us!"
       %li= "Event location: Technoport"
     %h4= "Sponsors"
-    %p= "If you are interested in sponsoring this or future events, feel free to contact us: georges@betacube.eu"
+    %p= "If you are interested in sponsoring this event or future events, please contact us: georges@betacube.eu"
