--- a/app/views/content/open_source.html.haml
+++ b/app/views/content/open_source.html.haml
@@ -6,11 +6,11 @@
     %h4= "We love Open Source"
     %p
       :plain
-        This entire website is <em>open source</em> and hosted on <strong>GitHub</strong>. We try to develop a real community driven website and we hope to get the community involved in the development process. That’s why we open sourced the code.
+        <a href="https://github.com/betacube/betacube.eu">This entire website is <em>open source</em> and hosted on <strong>GitHub</strong></a>. We try to develop a real community-driven website and we hope to get the community involved in its development process. That’s why we open sourced the code.
     %p
       :plain
         We want to educate our community to use new technologies/tools in their development projects and imply some strict but useful methodologies, including <strong>test-driven-development (TDD)</strong>, and tools like <strong>HAML</strong>, <strong>LESS</strong>, <strong>CoffeeScript</strong> and more.
-    %p= "Feel free to browse the code on Github. You can clone the repository to your own machine and make changes and push them back to Github."
+    %p= "Feel free to <a href="https://github.com/betacube/betacube.eu">browse the code on Github</a>. You can <a href="https://help.github.com/articles/fork-a-repo">clone the repository to your own machine</a> and make changes and push them back to Github."
     %p= "Any changes will be reviewed and then merged into the main repository."
   .span3
     %ul.open_source
