--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -38,7 +38,7 @@
           %p.label.label-warning= "Startups"
           %p.label.label-success= "Entrepreneurs"
           %p.label= "Marketing Experts"
-          %p.label.label-important= "Technology Envangelists"
+          %p.label.label-important= "Technology Evangelists"
           %p.label.label-inverse= "Web Nerds & Geeks"
 %hr.soften
 .container
