Updated the Hyperlink schedule.

--- a/app/views/content/meetups_hyperlink_2.html.haml
+++ b/app/views/content/meetups_hyperlink_2.html.haml
@@ -10,8 +10,9 @@
   .span9
     %h4= "Schedule"
     %ul
-      %li= "19:30 - Doors open"
-      %li= "20:00 - tba"
+      %li= "19:00 - Doors open"
+      %li= "20:00 - Welcome & Introduction"
+      %li= "20:15 - tba"
       %li= "21:00 - Dinner & Networking"
 
   .span9
