minor formatting and text adjustments

--- a/app/views/content/about.html.haml
+++ b/app/views/content/about.html.haml
@@ -36,8 +36,8 @@
     %ul
       %li= "First ideas in 2010"
       %li= "Founded in 2011"
-      %li= "1st Show & Tell in April 2012"
-      %li= "2st Show & Tell in September 2012"
+      %li= "1st <i>Show & Tell</i> in April 2012"
+      %li= "2st <i>Show & Tell</i> in September 2012"
       %li= "Already over 4 meetups in 2012"
       %li= "Over 10 events early 2013"
 %br
