--- a/app/views/content/sponsors.html.haml
+++ b/app/views/content/sponsors.html.haml
@@ -6,7 +6,7 @@
     %h4= "We need you"
     %p= "Betacube is a young and growing community. We strive to have more events in the near future. But to keep costs low and the quality of the events very high, we need funding."
     %p= "All the money we gather from sponsoring is put 100% into the community. We pay for event venues, food and drinks, lanyards, video and equipement."
-    %p= "The money helps us organising awesome events at great venues like the Abbaye Neumünster in the Luxembourg Grund. But also for great food and lots of drinks."
+    %p= "The money helps us organise awesome events at great venues like the Abbaye Neumünster in the Luxembourg Grund. But also for great food and lots of drinks."
     %h4= "Sponsors 101"
     %p= "We are currently working on our own sponsoring guide which will contain all information needed for future sponsors. In the meanwhile you can contact us directly via email if you are interested in sponsoring Betacube."
   .span3
