--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,30 @@
   .row-fluid.news
 
     .span4
+      %h4= "Betacube Pitch Day"
+      %p.date= "12.02.2014"
+      .news_content
+        %p= "Betacube is proud to present its first Pitch Day. This special event invites everyone with a great idea onto the stage."
+        %p= "Pitch your idea in front of a jury and potential investors alike. Get valuable feedback on your future/ongoing idea and get experienced to pitch your idea in front of an audience."
+        %p= "When: 20. February 2014 @ 7PM"
+        %p= "Where: Technoport at Esch/Belval"
+        %p
+          :plain
+            <a href="https://www.eventbrite.com/e/betacube-pitch-day-tickets-9991481791" target="_new">Registration and event details</a>
+
+    .span4
+      %h4= "Betacube After Work"
+      %p.date= "12.02.2014"
+      .news_content
+        %p= "Get ready for some AfterWork action!"
+        %p= "Join us for a cold/hot beverage and meet fellow ICT professionals from Luxembourg and the Greater Region."
+        %p= "When: 12. February 2014 @ 7PM"
+        %p= "Where: Independent Cafe in Luxembourg"
+        %p
+          :plain
+            <a href="http://www.techup.lu/181" target="_new">Registration and event details</a>
+
+    .span4
       %h4= "Hyperlink Meetup #2"
       %p.date= "15.01.2014"
       .news_content
@@ -57,23 +81,3 @@
         %p
           :plain
             <a href="http://www.betacube.eu/meetups/hyperlink_2" target="_new">Registration and event details</a>
-
-    .span4
-      %h4= "Hyperlink Meetup #1"
-      %p.date= "30.10.2013"
-      .news_content
-        %p= "We are proud to present the new and improved Meetup, called Hyperlink. The Hyperlink meetup is a themed meetup for web professionals specially interested in web development, new trends and best practices."
-        %p= "When: 30. October 2013 @ 8PM"
-        %p= "Where: Technoport at Esch/Belval"
-        %p
-          :plain
-            <a href="http://www.betacube.eu/meetups/hyperlink_1" target="_new">Registration and event details</a>
-
-    .span4
-      %h4= "Betacube After Work"
-      %p.date= "09.10.2013"
-      .news_content
-        %p= "Come and join us for a casual After-Work drink at the Independent Café in Luxembourg City."
-        %p
-          :plain
-            <a href="https://www.facebook.com/pages/INDEPENDENT-Café/143388437066" target="_new">Independent Café</a> - 09.10.2013 @ 7PM
