Added new AfterWork event to the home page.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,18 @@
   .row-fluid.news
 
     .span4
+      %h4= "Betacube After Work"
+      %p.date= "14.05.2014"
+      .news_content
+        %p= "Get ready for some AfterWork action!"
+        %p= "Join us for a cold/hot beverage and meet fellow developers from Luxembourg and the Greater Region."
+        %p= "When: 14. May 2014 @ 7PM"
+        %p= "Where: Independent Cafe in Luxembourg"
+        %p
+          :plain
+            <a href="http://www.techup.lu/415" target="_new">Registration and event details</a>
+
+    .span4
       %h4= "Betacube Pitch Day"
       %p.date= "12.02.2014"
       .news_content
@@ -70,14 +82,3 @@
         %p
           :plain
             <a href="http://www.techup.lu/181" target="_new">Registration and event details</a>
-
-    .span4
-      %h4= "Hyperlink Meetup #2"
-      %p.date= "15.01.2014"
-      .news_content
-        %p= "Save the date! Our next Hyperlink Meetup will be back in January 2014."
-        %p= "When: 15. January 2014 @ 7PM"
-        %p= "Where: Technoport at Esch/Belval"
-        %p
-          :plain
-            <a href="http://www.betacube.eu/meetups/hyperlink_2" target="_new">Registration and event details</a>
