Added Hyperlink #3 to the event pages.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,17 @@
   .row-fluid.news
 
     .span4
+      %h4= "Betacube Hyperlink Meetup #{3}"
+      %p.date= "10.06.2014"
+      .news_content
+        %p= "Join the Hyperlink meetup and have a great evening talking about the latest happenings in the web development world while holding a juicy beverage."
+        %p= "When: 10. June 2014 @ 7PM"
+        %p= "Where: Technoport Esch/Belval"
+        %p
+          :plain
+            <a href="http://www.betacube.eu/meetups/hyperlink_3" target="_new">Registration and event details</a>
+
+    .span4
       %h4= "Betacube After Work"
       %p.date= "14.05.2014"
       .news_content
@@ -70,15 +81,3 @@
         %p
           :plain
             <a href="https://www.eventbrite.com/e/betacube-pitch-day-tickets-9991481791" target="_new">Registration and event details</a>
-
-    .span4
-      %h4= "Betacube After Work"
-      %p.date= "12.02.2014"
-      .news_content
-        %p= "Get ready for some AfterWork action!"
-        %p= "Join us for a cold/hot beverage and meet fellow ICT professionals from Luxembourg and the Greater Region."
-        %p= "When: 12. February 2014 @ 7PM"
-        %p= "Where: Independent Cafe in Luxembourg"
-        %p
-          :plain
-            <a href="http://www.techup.lu/181" target="_new">Registration and event details</a>
