Removed the target new on the link on the main page.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -56,7 +56,7 @@
         %p= "Where: Technoport Esch/Belval"
         %p
           :plain
-            <a href="http://www.betacube.eu/meetups/hyperlink_3" target="_new">Registration and event details</a>
+            <a href="http://www.betacube.eu/meetups/hyperlink_3"> Registration and event details</a>
 
     .span4
       %h4= "Betacube After Work"
