Updated the talks for the Hyperlink Meetup #3

--- a/app/views/content/meetups_hyperlink_3.html.haml
+++ b/app/views/content/meetups_hyperlink_3.html.haml
@@ -11,8 +11,10 @@
     %ul
       %li= "19:00 - Doors open"
       %li= "20:00 - Introduction & Welcome"
-      %li= "20:15 - News, presented by [TBA]"
-      %li= "20:30 - Main talk [TBA]"
+      %li
+        = "20h30 -"
+        %strong Web Components
+        =", presented by Mathieu Tanguay-Carel (@matstc) Patrick Beer"
       %li= "21:00 - Dinner & Networking"
       %li= "22:30 - End"
 
