Changed the event schedule.

--- a/app/views/content/meetups_hyperlink_3.html.haml
+++ b/app/views/content/meetups_hyperlink_3.html.haml
@@ -10,13 +10,17 @@
     %h4= "Schedule"
     %ul
       %li= "19:00 - Doors open"
-      %li= "20:00 - Introduction & Welcome"
+      %li= "20:00 - Startupland.tv - 1st Episode screening"
       %li
-        = "20h30 -"
+        = "20h45 -"
         %strong Web Components
-        =", presented by Mathieu Tanguay-Carel (@matstc) Patrick Beer"
-      %li= "21:00 - Dinner & Networking"
-      %li= "22:30 - End"
+        =", presented by Mathieu Tanguay-Carel (@matstc) & Patrick Beer"
+      %li
+        = "21h00 -"
+        %strong Game Studio Talk
+        =", presented by Christian Biever"
+      %li= "21:30 - Dinner & Networking"
+      %li= "23:00 - End"
 
   .span9
     %h4= "Registration"
