Added new after work event to the homepage.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,18 @@
   .row-fluid.news
 
     .span4
+      %h4= "Betacube After Work"
+      %p.date= "08.10.2014"
+      .news_content
+        %p= "Get ready for some AfterWork action!"
+        %p= "Join us for a cold/hot beverage and meet fellow web professionals from Luxembourg and the Greater Region."
+        %p= "When: 8. October 2014 @ 7PM"
+        %p= "Where: Independent Cafe in Luxembourg"
+        %p
+          :plain
+            <a href="http://www.techup.lu/472" target="_new">Registration and event details</a>
+
+    .span4
       %h4= "Betacube Hyperlink Meetup #{3}"
       %p.date= "10.06.2014"
       .news_content
@@ -69,15 +81,3 @@
         %p
           :plain
             <a href="http://www.techup.lu/415" target="_new">Registration and event details</a>
-
-    .span4
-      %h4= "Betacube Pitch Day"
-      %p.date= "12.02.2014"
-      .news_content
-        %p= "Betacube is proud to present its first Pitch Day. This special event invites everyone with a great idea onto the stage."
-        %p= "Pitch your idea in front of a jury and potential investors alike. Get valuable feedback on your future/ongoing idea and get experienced to pitch your idea in front of an audience."
-        %p= "When: 20. February 2014 @ 7PM"
-        %p= "Where: Technoport at Esch/Belval"
-        %p
-          :plain
-            <a href="https://www.eventbrite.com/e/betacube-pitch-day-tickets-9991481791" target="_new">Registration and event details</a>
